Pascal/test/cohadar/pascal/errors/condition_while.pas
program test;
var a : integer;
	
begin
	while (a) do begin 
		a := a - 1 
	end; 
end.